[tool.poetry]
name = "group5-p4"
version = "0.1.0"
description = ""
authors = ["felixng <ngthinh302@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
tqdm = "^4.66.5"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
